[tool.poetry]
name = "doc2docx"
version = "0.2.0"
description = "Convert doc to docx on Windows or macOS directly using Microsoft Word (must be installed)."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cosmojg/doc2docx"
repository = "https://github.com/cosmojg/doc2docx"
authors = ["Cosmo J. Guerini <cosmo@cosmo.red>"]
classifiers = [
	"Operating System :: MacOS",
	"Environment :: MacOS X",
	"Environment :: Win32 (MS Windows)",
	"Operating System :: Microsoft :: Windows",
	"Topic :: Office/Business :: Office Suites",
	"Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = ">= 3.5"
pywin32 = {version = ">= 227", platform = "win32"}
tqdm = ">= 4.41.0"
importlib_metadata = {version = ">= 1.3.0", python = "< 3.12"}
appscript = {version = ">= 1.1.0", platform = "darwin"}

[tool.poetry.dev-dependencies]
pytest = ">= 5.2"

[tool.poetry.scripts]
doc2docx = 'doc2docx:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
